// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<tbody
  className="cf-tf7x23"
>
  TableBody
</tbody>
`;

exports[`should render extra class names 1`] = `
<tbody
  className="extra"
>
  TableBody
</tbody>
`;
